v1.0.0/modules/schema/pages/class/ElectronicAddress.adoc
= `ElectronicAddress`
:toclevels: 4


+++Electronic address information.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ElectronicAddress`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`ElectronicAddress`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<email1,`email1`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Primary email address.+++

| <<email2,`email2`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Alternate email address.+++

| <<lan,`lan`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Address on local area network.+++

| <<mac,`mac`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++MAC (Media Access Control) address.+++

| <<password,`password`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Password needed to log in.+++

| <<radio,`radio`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Radio address.+++

| <<userID,`userID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++User ID needed to log in, which can be for an individual person, an organisation, a location, etc.+++

| <<web,`web`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++World wide web address.+++
|===

'''


//[discrete]
[#email1]
=== `email1`
+++Primary email address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ElectronicAddress.email1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#email2]
=== `email2`
+++Alternate email address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ElectronicAddress.email2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#lan]
=== `lan`
+++Address on local area network.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ElectronicAddress.lan`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#mac]
=== `mac`
+++MAC (Media Access Control) address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ElectronicAddress.mac`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#password]
=== `password`
+++Password needed to log in.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ElectronicAddress.password`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#radio]
=== `radio`
+++Radio address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ElectronicAddress.radio`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#userID]
=== `userID`
+++User ID needed to log in, which can be for an individual person, an organisation, a location, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ElectronicAddress.userID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#web]
=== `web`
+++World wide web address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ElectronicAddress.web`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===


